--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
     "yup": "^1.6.1"
   },
