--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.54.2",
     "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
     "yup": "^1.6.1"
